# pyMMAopt

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
examples/: beam_uniform.geo  compliance.py  corner_mesh.geo  quadratic_pde.py
pyMMAopt/: __about__.py  __init__.py  constraints.py  mma.py  mma_solver.py
tests/: test_analytical.py  test_compliance.py  test_restart.py
