[metadata]
name = pyMMAopt
version = 0.0.4
author = GetDP Project
author_email = salazardetro1@llnl.gov
description = MMA algorithm in python
url = https://github.com/LLNL/pyMMAopt
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files = LICENSE
platforms = any
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel
